refactor: header style sheet

--- a/notice/index.html
+++ b/notice/index.html
@@ -27,7 +27,7 @@
 
           <div class="top-container">
             <ul class="fix-white-space">
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="/admission/">ADMISSIONS</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -35,7 +35,7 @@
                   ></use>
                 </svg>
               </li>
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="#">ACADEMICS</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -43,7 +43,7 @@
                   ></use>
                 </svg>
               </li>
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="/notice/">NOTICE</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -51,7 +51,7 @@
                   ></use>
                 </svg>
               </li>
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="/about/">ABOUT</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -70,7 +70,7 @@
               class="separator-img"
             />
             <ul class="fix-white-space">
-              <li class="nav-links text-large">
+              <li class="nav-links nav-links--main text-large">
                 <a href="#">
                   Link One
                   <svg class="sprite sprite--light sprite--normal" role="img">
@@ -86,7 +86,7 @@
                   <li><a href="#" class="text-small-extra">List item 4</a></li>
                 </ul>
               </li>
-              <li class="nav-links text-large">
+              <li class="nav-links nav-links--main text-large">
                 <a href="#">
                   Link Two
                   <svg class="sprite sprite--light sprite--normal" role="img">
@@ -102,7 +102,7 @@
                   <li><a href="#" class="text-small-extra">List item 4</a></li>
                 </ul>
               </li>
-              <li class="nav-links text-large">
+              <li class="nav-links nav-links--main text-large">
                 <a href="#">
                   Link Three
                   <svg class="sprite sprite--light sprite--normal" role="img">
