--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <header class="container">
+      <!-- Info Section -->
       <ul class="top-section">
         <li>
           <a
@@ -46,14 +47,19 @@
           >
         </li>
       </ul>
+      <!-- End of Info Section -->
 
       <!-- Header Navigation -->
       <nav class="main-nav">
         <div class="left-section">
           <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
-          <img src="https://placehold.co/140x60" alt="logo" class="logo-wide" />
+          <img
+            src="https://dummyimage.com/140x60/eee/aaa "
+            alt="logo"
+            class="logo-wide"
+          />
           <ul class="primary-links fix-white-space">
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="/admission/">ADMISSIONS</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -67,7 +73,7 @@
                 <li><a href="#" class="text-small-extra">List item 4</a></li>
               </ul>
             </li>
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="#">ACADEMICS</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -81,7 +87,7 @@
                 <li><a href="#" class="text-small-extra">List item 4</a></li>
               </ul>
             </li>
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="/notice/">NOTICE</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -95,7 +101,7 @@
                 <li><a href="#" class="text-small-extra">List item 4</a></li>
               </ul>
             </li>
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="/about/">ABOUT</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -111,49 +117,32 @@
             </li>
           </ul>
         </div>
+
         <div class="right-section">
           <ul class="secondary-links fix-white-space">
-            <li class="nav-links text-small-extra">
+            <li class="nav-links nav-links--alt text-small-extra">
               <a href="#">Staff</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
                   href="/assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
               </svg>
-              <ul class="sub-menu__right">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
             </li>
-            <li class="nav-links text-small-extra">
+            <li class="nav-links nav-links--alt text-small-extra">
               <a href="#">Students</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
                   href="/assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
               </svg>
-              <ul class="sub-menu__right">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
             </li>
-            <li class="nav-links text-small-extra">
+            <li class="nav-links nav-links--alt text-small-extra">
               <a href="#">Parents</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
                   href="/assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
               </svg>
-              <ul class="sub-menu__right">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
             </li>
           </ul>
           <search>
