--- a/admission/index.html
+++ b/admission/index.html
@@ -26,7 +26,7 @@
 
           <div class="top-container">
             <ul class="fix-white-space">
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="/admission/">ADMISSIONS</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -34,7 +34,7 @@
                   ></use>
                 </svg>
               </li>
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="#">ACADEMICS</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -42,7 +42,7 @@
                   ></use>
                 </svg>
               </li>
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="/notice/">NOTICE</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -50,7 +50,7 @@
                   ></use>
                 </svg>
               </li>
-              <li class="nav-links text-small">
+              <li class="nav-links nav-links--main text-small">
                 <a href="/about/">ABOUT</a>
                 <svg class="sprite sprite--light sprite--normal" role="img">
                   <use
@@ -69,7 +69,7 @@
               class="separator-img"
             />
             <ul class="fix-white-space">
-              <li class="nav-links text-large">
+              <li class="nav-links nav-links--main text-large">
                 <a href="#">
                   Link One
                   <svg class="sprite sprite--light sprite--normal" role="img">
@@ -85,7 +85,7 @@
                   <li><a href="#" class="text-small-extra">List item 4</a></li>
                 </ul>
               </li>
-              <li class="nav-links text-large">
+              <li class="nav-links nav-links--main text-large">
                 <a href="#">
                   Link Two
                   <svg class="sprite sprite--light sprite--normal" role="img">
@@ -101,7 +101,7 @@
                   <li><a href="#" class="text-small-extra">List item 4</a></li>
                 </ul>
               </li>
-              <li class="nav-links text-large">
+              <li class="nav-links nav-links--main text-large">
                 <a href="#">
                   Link Three
                   <svg class="sprite sprite--light sprite--normal" role="img">
