--- a/search/index.html
+++ b/search/index.html
@@ -44,14 +44,15 @@
       <!-- Header Navigation -->
       <nav class="main-nav">
         <div class="left-section">
-          <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
-          <img
-            src="https://placehold.co/140x60"
-            alt="a placeholder logo for small screen device"
-            class="logo-wide"
-          />
+          <a href="/public/" aria-label="home page">
+            <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
+            <img
+              src="https://dummyimage.com/140x60/eee/aaa "
+              alt="logo"
+              class="logo-wide"
+          /></a>
           <ul class="primary-links fix-white-space">
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="/admission/">ADMISSIONS</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -65,7 +66,7 @@
                 <li><a href="#" class="text-small-extra">List item 4</a></li>
               </ul>
             </li>
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="#">ACADEMICS</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -79,7 +80,7 @@
                 <li><a href="#" class="text-small-extra">List item 4</a></li>
               </ul>
             </li>
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="/notice/">NOTICE</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -93,7 +94,7 @@
                 <li><a href="#" class="text-small-extra">List item 4</a></li>
               </ul>
             </li>
-            <li class="nav-links text-medium-bold">
+            <li class="nav-links nav-links--main text-medium-bold">
               <a href="/about/">ABOUT</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
@@ -109,49 +110,32 @@
             </li>
           </ul>
         </div>
+
         <div class="right-section">
           <ul class="secondary-links fix-white-space">
-            <li class="nav-links text-small-extra">
+            <li class="nav-links nav-links--alt text-small-extra">
               <a href="#">Staff</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
                   href="/assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
               </svg>
-              <ul class="sub-menu__right">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
             </li>
-            <li class="nav-links text-small-extra">
+            <li class="nav-links nav-links--alt text-small-extra">
               <a href="#">Students</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
                   href="/assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
               </svg>
-              <ul class="sub-menu__right">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
             </li>
-            <li class="nav-links text-small-extra">
+            <li class="nav-links nav-links--alt text-small-extra">
               <a href="#">Parents</a>
               <svg class="sprite sprite--light sprite--small" role="img">
                 <use
                   href="/assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
               </svg>
-              <ul class="sub-menu__right">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
             </li>
           </ul>
           <search>
