update submenu style

--- a/notice/index.html
+++ b/notice/index.html
@@ -29,7 +29,7 @@
             <ul class="fix-white-space">
               <li class="nav-links nav-links--main text-small">
                 <a href="/admission/">ADMISSIONS</a>
-                <svg class="sprite sprite--light sprite--normal" role="img">
+                <svg class="sprite sprite--light sprite--small" role="img">
                   <use
                     href="/assets/img/sprite.svg#icon-chevron-down-short"
                   ></use>
@@ -37,7 +37,7 @@
               </li>
               <li class="nav-links nav-links--main text-small">
                 <a href="#">ACADEMICS</a>
-                <svg class="sprite sprite--light sprite--normal" role="img">
+                <svg class="sprite sprite--light sprite--small" role="img">
                   <use
                     href="/assets/img/sprite.svg#icon-chevron-down-short"
                   ></use>
@@ -45,7 +45,7 @@
               </li>
               <li class="nav-links nav-links--main text-small">
                 <a href="/notice/">NOTICE</a>
-                <svg class="sprite sprite--light sprite--normal" role="img">
+                <svg class="sprite sprite--light sprite--small" role="img">
                   <use
                     href="/assets/img/sprite.svg#icon-chevron-down-short"
                   ></use>
@@ -53,7 +53,7 @@
               </li>
               <li class="nav-links nav-links--main text-small">
                 <a href="/about/">ABOUT</a>
-                <svg class="sprite sprite--light sprite--normal" role="img">
+                <svg class="sprite sprite--light sprite--small" role="img">
                   <use
                     href="/assets/img/sprite.svg#icon-chevron-down-short"
                   ></use>
@@ -71,52 +71,79 @@
             />
             <ul class="fix-white-space">
               <li class="nav-links nav-links--main text-large">
-                <a href="#">
-                  Link One
+                <a href="#"
+                  >Link One
                   <svg class="sprite sprite--light sprite--normal" role="img">
                     <use
                       href="/assets/img/sprite.svg#icon-chevron-down-short"
-                    ></use>
-                  </svg>
-                </a>
-                <ul class="sub-menu">
-                  <li><a href="#" class="text-small-extra">List item 1</a></li>
-                  <li><a href="#" class="text-small-extra">List item 2</a></li>
-                  <li><a href="#" class="text-small-extra">List item 3</a></li>
-                  <li><a href="#" class="text-small-extra">List item 4</a></li>
-                </ul>
+                    ></use></svg
+                ></a>
+                <div class="sub-menu-wrapper">
+                  <ul class="sub-menu">
+                    <li>
+                      <a href="#" class="text-small-extra">List item 1</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 2</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 3</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 4</a>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <li class="nav-links nav-links--main text-large">
-                <a href="#">
-                  Link Two
+                <a href="#"
+                  >Link Two
                   <svg class="sprite sprite--light sprite--normal" role="img">
                     <use
                       href="/assets/img/sprite.svg#icon-chevron-down-short"
-                    ></use>
-                  </svg>
-                </a>
-                <ul class="sub-menu">
-                  <li><a href="#" class="text-small-extra">List item 1</a></li>
-                  <li><a href="#" class="text-small-extra">List item 2</a></li>
-                  <li><a href="#" class="text-small-extra">List item 3</a></li>
-                  <li><a href="#" class="text-small-extra">List item 4</a></li>
-                </ul>
+                    ></use></svg
+                ></a>
+                <div class="sub-menu-wrapper">
+                  <ul class="sub-menu">
+                    <li>
+                      <a href="#" class="text-small-extra">List item 1</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 2</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 3</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 4</a>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <li class="nav-links nav-links--main text-large">
-                <a href="#">
-                  Link Three
+                <a href="#"
+                  >Link Three
                   <svg class="sprite sprite--light sprite--normal" role="img">
                     <use
                       href="/assets/img/sprite.svg#icon-chevron-down-short"
-                    ></use>
-                  </svg>
-                </a>
-                <ul class="sub-menu">
-                  <li><a href="#" class="text-small-extra">List item 1</a></li>
-                  <li><a href="#" class="text-small-extra">List item 2</a></li>
-                  <li><a href="#" class="text-small-extra">List item 3</a></li>
-                  <li><a href="#" class="text-small-extra">List item 4</a></li>
-                </ul>
+                    ></use></svg
+                ></a>
+                <div class="sub-menu-wrapper">
+                  <ul class="sub-menu">
+                    <li>
+                      <a href="#" class="text-small-extra">List item 1</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 2</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 3</a>
+                    </li>
+                    <li>
+                      <a href="#" class="text-small-extra">List item 4</a>
+                    </li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
