--- a/public/index.html
+++ b/public/index.html
@@ -52,68 +52,81 @@
       <!-- Header Navigation -->
       <nav class="main-nav">
         <div class="left-section">
-          <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
-          <img
-            src="https://dummyimage.com/140x60/eee/aaa "
-            alt="logo"
-            class="logo-wide"
-          />
+          <a href="/public/" aria-label="home page">
+            <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
+            <img
+              src="https://dummyimage.com/140x60/eee/aaa "
+              alt="logo"
+              class="logo-wide"
+          /></a>
           <ul class="primary-links fix-white-space">
             <li class="nav-links nav-links--main text-medium-bold">
-              <a href="/admission/">ADMISSIONS</a>
-              <svg class="sprite sprite--light sprite--small" role="img">
-                <use
-                  href="/assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
+              <a href="/admission/"
+                >ADMISSIONS
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use></svg
+              ></a>
+              <div class="sub-menu-wrapper">
+                <ul class="sub-menu">
+                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li><a href="#" class="text-small-extra">List item 2</a></li>
+                  <li><a href="#" class="text-small-extra">List item 3</a></li>
+                  <li><a href="#" class="text-small-extra">List item 4</a></li>
+                </ul>
+              </div>
             </li>
             <li class="nav-links nav-links--main text-medium-bold">
-              <a href="#">ACADEMICS</a>
-              <svg class="sprite sprite--light sprite--small" role="img">
-                <use
-                  href="/assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
+              <a href="#"
+                >ACADEMICS
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use></svg
+              ></a>
+              <div class="sub-menu-wrapper">
+                <ul class="sub-menu">
+                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li><a href="#" class="text-small-extra">List item 2</a></li>
+                  <li><a href="#" class="text-small-extra">List item 3</a></li>
+                  <li><a href="#" class="text-small-extra">List item 4</a></li>
+                </ul>
+              </div>
             </li>
             <li class="nav-links nav-links--main text-medium-bold">
-              <a href="/notice/">NOTICE</a>
-              <svg class="sprite sprite--light sprite--small" role="img">
-                <use
-                  href="/assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
+              <a href="/notice/"
+                >NOTICE
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use></svg
+              ></a>
+              <div class="sub-menu-wrapper">
+                <ul class="sub-menu">
+                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li><a href="#" class="text-small-extra">List item 2</a></li>
+                  <li><a href="#" class="text-small-extra">List item 3</a></li>
+                  <li><a href="#" class="text-small-extra">List item 4</a></li>
+                </ul>
+              </div>
             </li>
             <li class="nav-links nav-links--main text-medium-bold">
-              <a href="/about/">ABOUT</a>
-              <svg class="sprite sprite--light sprite--small" role="img">
-                <use
-                  href="/assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
+              <a href="/about/"
+                >ABOUT
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use></svg
+              ></a>
+              <div class="sub-menu-wrapper">
+                <ul class="sub-menu">
+                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li><a href="#" class="text-small-extra">List item 2</a></li>
+                  <li><a href="#" class="text-small-extra">List item 3</a></li>
+                  <li><a href="#" class="text-small-extra">List item 4</a></li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
