fix: responsive padding in nav

--- a/notice/index.html
+++ b/notice/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="container">
       <!-- Header Navigation -->
-      <nav class="main-nav">
+      <nav class="main-nav section--inline">
         <div class="nav-wrapper">
           <a href="/public/" class="logo-wrapper" aria-label="home page">
             <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
