--- a/search/index.html
+++ b/search/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="container">
       <!-- Info Section -->
-      <ul class="top-section">
+      <ul class="top-section section--inline">
         <li>
           <a
             class="text-small-extra-bold"
@@ -42,7 +42,7 @@
       <!-- End of Info Section -->
 
       <!-- Header Navigation -->
-      <nav class="main-nav">
+      <nav class="main-nav section--inline">
         <div class="left-section">
           <a href="/public/" aria-label="home page">
             <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
