fix: admission extra page responsive

--- a/admission/pages/index.html
+++ b/admission/pages/index.html
@@ -364,10 +364,18 @@
       </nav>
       <!-- End of Mobile Navigation -->
     </header>
+
     <!-- Main -->
-    <main>
+    <main class="container section--inline">
       <!-- Breadcrumb -->
       <nav class="breadcrumb">
+        <svg
+          class="btn-nav-sidebar sprite sprite--dark sprite--normal"
+          role="img"
+        >
+          <use href="/assets/img/sprite.svg#sidebar-menu"></use>
+        </svg>
+
         <ul>
           <li class="breadcrumb-link">
             <a href="#" class="text-small-extra-bold">Home</a>
@@ -382,7 +390,7 @@
             </svg>
           </li>
           <li class="breadcrumb-link">
-            <a href="#" class="text-small-extra">Procedure</a>
+            <span class="text-small-extra">Procedure</span>
             <svg class="sprite sprite--normal" role="img">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
@@ -392,58 +400,61 @@
 
       <section class="grid-container">
         <nav class="side-nav">
-          <h2 class="text-large-bold">ADMISSIONS</h2>
-          <ul class="side-nav--outer">
-            <li>
-              <a class="text-small-extra" href="#"
-                >Admission Procedure
-                <svg class="sprite sprite--light sprite--normal" role="img">
-                  <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="text-small-extra" href="#"
-                >Eligibility Criteria
-                <svg class="sprite sprite--light sprite--normal" role="img">
-                  <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="text-small-extra" href="#"
-                >Documentation
-                <svg class="sprite sprite--light sprite--normal" role="img">
-                  <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="text-small-extra" href="#"
-                >Additional Requirements
-                <svg class="sprite sprite--light sprite--normal" role="img">
-                  <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="text-small-extra" href="#"
-                >Fee Structure
-                <svg class="sprite sprite--light sprite--normal" role="img">
-                  <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="text-small-extra" href="#"
-                >How to Apply
-                <svg class="sprite sprite--light sprite--normal" role="img">
-                  <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="nav-contents-wrapper">
+            <h2 class="side-nav-heading text-large-bold">ADMISSIONS</h2>
+            <ul class="side-nav--outer">
+              <li>
+                <a class="text-small-extra" href="#"
+                  >Admission Procedure
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="text-small-extra" href="#"
+                  >Eligibility Criteria
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="text-small-extra" href="#"
+                  >Documentation
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="text-small-extra" href="#"
+                  >Additional Requirements
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="text-small-extra" href="#"
+                  >Fee Structure
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="text-small-extra" href="#"
+                  >How to Apply
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </nav>
+
         <div class="main-content">
           <section>
             <h3 class="text-large-bold">Admission Procedure:</h3>
