fix: admission page responsive

--- a/admission/index.html
+++ b/admission/index.html
@@ -70,7 +70,7 @@
             />
             <ul class="fix-white-space">
               <li class="nav-links nav-links--main text-large">
-                <a href="#"
+                <a href="./pages/"
                   >Link One
                   <svg class="sprite sprite--light sprite--normal" role="img">
                     <use
@@ -365,7 +365,7 @@
       <!-- End of Mobile Navigation -->
     </header>
 
-    <main>
+    <main class="container">
       <section class="hero">
         <nav class="breadcrumb">
           <ul>
@@ -383,6 +383,7 @@
             </li>
           </ul>
         </nav>
+
         <h1 class="heading-2">
           ADMISSIONS
           <svg class="sprite sprite--dark sprite--normal" role="img">
