add contact us page

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,11 @@
               ></a>
               <div class="sub-menu-wrapper">
                 <ul class="sub-menu">
-                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li>
+                    <a href="/about/contact/" class="text-small-extra"
+                      >Contact Us</a
+                    >
+                  </li>
                   <li><a href="#" class="text-small-extra">List item 2</a></li>
                   <li><a href="#" class="text-small-extra">List item 3</a></li>
                   <li><a href="#" class="text-small-extra">List item 4</a></li>
