--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,14 @@
 
     <script src="/public/js/components/header.js" type="module"></script>
     <script src="/public/js/components/footer.js" type="module"></script>
+    <script src="/public/js/components/search.js" type="module"></script>
     <title>About</title>
   </head>
 
   <body>
     <ps-header variant="rest" page="about"></ps-header>
 
-    <main>
+    <main class="container">
       <nav class="breadcrumb">
         <ul>
           <li class="breadcrumb-link">
@@ -143,18 +144,7 @@
         </aside>
       </div>
 
-      <section class="search">
-        <form action="get" class="search-form-large">
-          <input
-            type="search"
-            name="search-input"
-            id="search-input"
-            class="text-small"
-            placeholder="Can’t Find What You’re Looking For?"
-          />
-          <button class="text-medium btn-submit">Search</button>
-        </form>
-      </section>
+      <ps-search></ps-search>
     </main>
 
     <ps-footer></ps-footer>
