--- a/notice/index.html
+++ b/notice/index.html
@@ -9,6 +9,7 @@
 
     <script src="/public/js/components/header.js" type="module"></script>
     <script src="/public/js/components/footer.js" type="module"></script>
+    <script src="/public/js/components/search.js" type="module"></script>
     <script src="./js/script.js" defer></script>
     <title>Notice</title>
   </head>
@@ -16,7 +17,7 @@
   <body>
     <ps-header variant="rest" page="notice"></ps-header>
 
-    <main>
+    <main class="container">
       <nav class="breadcrumb">
         <ul>
           <li class="breadcrumb-link">
@@ -314,18 +315,8 @@
           </ul>
         </section>
       </div>
-      <section class="search">
-        <form action="get" class="search-form-large">
-          <input
-            type="search"
-            name="search-input"
-            id="search-input"
-            class="text-small"
-            placeholder="Can’t Find What You’re Looking For?"
-          />
-          <button class="text-medium btn-submit">Search</button>
-        </form>
-      </section>
+
+      <ps-search></ps-search>
     </main>
 
     <ps-footer></ps-footer>
